<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <TextView
            android:id="@+id/text_logo_login"
            android:text="VKMessage"
            android:gravity="center"
            android:textSize="51dp"
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp">

        <TextView
                android:id="@+id/txt_login_hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_hello"/>

        <Button
                android:id="@+id/btn_login_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_enter"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:background="@drawable/background_shape_style"
                android:textColor="@color/vk_color"/>

        <com.github.rahatarmanahmed.cpv.CircularProgressView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/progress_view"
                android:visibility="gone"
                android:layout_width="@dimen/loaded_size"
                android:layout_height="@dimen/loaded_size"
                android:layout_marginTop="16dp"
                app:cpv_color="@color/colorPrimary"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="true" />
    </LinearLayout>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_marginBottom="16dp"
                 android:layout_gravity="bottom"
                 android:layout_height="wrap_content">
        <TextView
                android:id="@+id/txt_savers_account_no_items"
                android:text="@string/accounts_saves_list_empty"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_height="wrap_content"/>
        <com.github.rahatarmanahmed.cpv.CircularProgressView
                android:id="@+id/cpv_savers_account"
                android:layout_width="@dimen/loaded_size"
                android:layout_gravity="center"
                android:visibility="gone"
                app:cpv_color="@color/colorPrimary"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="true"
                android:layout_height="@dimen/loaded_size"/>
        <android.support.v7.widget.RecyclerView
                android:overScrollMode="never"
                android:visibility="gone"
                android:id="@+id/have_account_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </FrameLayout>

</FrameLayout>