<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/profile_activity_layout"
              android:background="@color/vk_grey_color"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:scrollbars="vertical"
              android:layout_height="match_parent">
    <LinearLayout
            android:background="#FFF"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:id="@+id/shapka_user"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_avatar_profile"
                android:src="@color/vk_light_color"
                android:layout_margin="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        <TextView
                android:id="@+id/user_name_surname_profile"
                android:paddingLeft="16dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Павел Милков"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <ImageButton
                android:background="@null"
                android:src="@drawable/ic_change_user_account"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="32dp"/>
    </LinearLayout>
    <LinearLayout
            android:background="#FFF"
            android:orientation="vertical"
            android:layout_marginTop="6dp"
            android:id="@+id/user_container_information_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!-- Cтатус Юзера -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                        android:focusable="false"
                        android:id="@+id/user_status_profile"
                        android:background="@drawable/background_shape_style"
                        android:padding="6dp"
                        android:layout_margin="6dp"
                        android:text="Hello!There's my VK status"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="#6E6F70"
                        android:textStyle="italic"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
        </LinearLayout>
        <!--Основная инфа Юзера-->
        <LinearLayout
                android:layout_marginTop="9dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                        android:layout_marginTop="4dp"
                        android:orientation="vertical"
                        android:layout_width="25dp"
                        android:layout_height="match_parent">
                        <ImageView
                                android:layout_margin="2dp"
                                android:background="@null"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_cake_black_24dp"
                                android:layout_width="22dp"
                                android:layout_height="wrap_content"/>
                        <ImageView
                                android:layout_gravity="center"
                                android:layout_margin="6dp"
                                android:background="@null"
                                android:src="@drawable/ic_city_profile"
                                android:layout_width="22dp"
                                android:layout_height="wrap_content"/>
                        <ImageView
                                android:layout_gravity="center"
                                android:layout_margin="8dp"
                                android:background="@null"
                                android:src="@drawable/ic_family_status_profile"
                                android:layout_width="22dp"
                                android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_margin="8dp"
                            android:text="@string/bdate_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_margin="8dp"
                            android:text="@string/city_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_margin="8dp"
                            android:text="@string/family_status_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="2dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/user_bdate_profile"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/user_city_profile"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/user_family_status_profile"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:id="@+id/user_container_information_activity"
            android:layout_width="wrap_content"
            android:layout_height="80dp">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_image"
                android:padding="4dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                android:scrollbars="none"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <RelativeLayout
            android:layout_margin="1dp"
            android:background="#FFF"
            android:orientation="vertical"
            android:id="@+id/user_wall_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_margin="3dp"
                    android:id="@+id/wall_post_avatar"
                    android:layout_gravity="center|left"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
        <TextView
                android:layout_margin="3dp"
                android:layout_toRightOf="@id/wall_post_avatar"
                android:gravity="center_vertical"
                android:background="@drawable/background_shape_style"
                android:paddingLeft="18dp"
                android:textSize="18dp"
                android:typeface="serif"
                android:text="@string/text_wall_placeholder"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"/>
    </RelativeLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recycler_wall_post_profile"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/txt_friends_no_items"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_height="wrap_content"/>
        <com.github.rahatarmanahmed.cpv.CircularProgressView
                android:id="@+id/cpv_profile_posts"
                android:layout_width="@dimen/loaded_size"
                android:layout_gravity="center"
                android:visibility="gone"
                app:cpv_color="@color/colorPrimary"
                app:cpv_animAutostart="true"
                app:cpv_indeterminate="true"
                android:layout_height="@dimen/loaded_size"/>
        <io.github.yavski.fabspeeddial.FabSpeedDial
                app:fabDrawable="@drawable/ic_profile"
                android:id="@+id/menu_fab"
                android:layout_gravity="bottom|right"
                app:fabGravity="bottom_end"
                app:fabMenu="@menu/ic_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </FrameLayout>
</LinearLayout>